fixed the grid alignment , pushed i to the center through changing left alignmrnt of smaller cards

--- a/style.css
+++ b/style.css
@@ -253,7 +253,12 @@ audio {
 
 .grid-page {
     grid-template-columns: 1fr 1fr 1fr;
-  
+    
+    
+}
+
+.smaller-card {
+    left: 5%;
 }
 
 
